syntax = "proto3";

package payment;

option go_package = "../pb";

message Payment {
    string id = 1;
    string booking_id = 2;
    string invoice_id = 3;
    string invoice_url = 4;
    int32 amount = 5;
    string method = 6;
    string status = 7;
    string created_at = 8;
    string updated_at = 9;
}

service PaymentService {
    rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
    rpc GetPaymentById(GetPaymentByIdRequest) returns (GetPaymentByIdResponse);
}

message CreatePaymentRequest {
    string booking_id = 1;
    int32 amount = 2;
    string method = 3;
}

message CreatePaymentResponse {
    string booking_id = 1;
    string invoice_id = 2;
    string invoice_url = 3;
    int32 amount = 4;
    string method = 5;
    string status = 6;
    string created_at = 7;
    string updated_at = 8;
}

message GetPaymentByIdRequest {
    string payment_id = 1;
}

message GetPaymentByIdResponse {
    Payment payment = 1;
}
